force-app/main/default/objects/Account/fields/Date_diff_in_secs__c.field-meta.xml
<CustomField>
    <fullName>Date_diff_in_secs__c</fullName>
    <label>Date diff in secs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>