force-app/main/default/objects/Account/fields/DateTest__c.field-meta.xml
<CustomField>
    <fullName>DateTest__c</fullName>
    <label>DateTest</label>
    <type>Date</type>
</CustomField>