force-app/main/default/objects/Account/fields/First_and_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>First_and_Last_Name__c</fullName>
    <label>First and Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>