force-app/main/default/objects/Account/fields/Open_Other_Acc__c.field-meta.xml
<CustomField>
    <fullName>Open_Other_Acc__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp;  $User.Id , &quot;Other Account&quot;, &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Open Other Acc</label>
    <type>Text</type>
</CustomField>