force-app/main/default/objects/Account/fields/Random_Number__c.field-meta.xml
<CustomField>
    <fullName>Random_Number__c</fullName>
    <formula>TEXT(ROUND(0.5,0))</formula>
    <label>Random Number</label>
    <type>Text</type>
</CustomField>