force-app/main/default/objects/Account/fields/Testing_Git__c.field-meta.xml
<CustomField>
    <fullName>Testing_Git__c</fullName>
    <description>Testing git Deployment</description>
    <label>Testing Git</label>
    <length>10</length>
    <type>Text</type>
</CustomField>